force-app/main/default/objects/Billing_Assessment__c/Billing_Assessment__c.object-meta.xml
<CustomObject>
    <label>Billing Assessment</label>
    <nameField>
        <label>Billing Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>