force-app/main/default/objects/Billing_Assessment__c/fields/Account_Assingment__c.field-meta.xml
<CustomField>
    <fullName>Account_Assingment__c</fullName>
    <description>Added to billing Assessment by ATG Sales and SE team</description>
    <inlineHelpText>Do you see Child Accounts shift from Parent Account to Parent Account frequently?</inlineHelpText>
    <label>Account Assingment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>