force-app/main/default/objects/Billing_Assessment__c/fields/Account_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Account_Hierarchy__c</fullName>
    <inlineHelpText>Do you have a parent/child hierarchy? Is it multi-tier? Do you have sibling associations between child accounts?</inlineHelpText>
    <label>Account Hierarchy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Parent Child</fullName>
            </value>
            <value>
                <fullName>Three or more tiers</fullName>
            </value>
            <value>
                <fullName>Sibling Relationships</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>