force-app/main/default/objects/Billing_Assessment__c/fields/Additional_Account_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Account_Information__c</fullName>
    <inlineHelpText>To capture any unique information about Accounts.</inlineHelpText>
    <label>Additional Account Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>