force-app/main/default/objects/Billing_Assessment__c/fields/Additional_Adjustments_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Adjustments_Information__c</fullName>
    <inlineHelpText>To capture additional unique information about your Adjustments Process.</inlineHelpText>
    <label>Additional Adjustments Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>