force-app/main/default/objects/Billing_Assessment__c/fields/Additional_Amendments_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Amendments_Information__c</fullName>
    <inlineHelpText>To capture any additional unique information about your Amendments Process.</inlineHelpText>
    <label>Additional Amendments Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>