force-app/main/default/objects/Billing_Assessment__c/fields/Additional_Collections_Dunning_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Collections_Dunning_Info__c</fullName>
    <inlineHelpText>To capture additional unique information about your Collections/Dunning processes.</inlineHelpText>
    <label>Additional Collections/Dunning Info</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>