force-app/main/default/objects/Billing_Assessment__c/fields/Additional_Contracting_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contracting_Considerations__c</fullName>
    <label>Additional Contracting Considerations</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>