force-app/main/default/objects/Billing_Assessment__c/fields/Additional_Customer_Support_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Customer_Support_Information__c</fullName>
    <inlineHelpText>To capture additional unique information about your customer support processes.</inlineHelpText>
    <label>Additional Customer Support Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>