force-app/main/default/objects/Billing_Assessment__c/fields/Additional_ERP_Financial_System_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_ERP_Financial_System_Info__c</fullName>
    <inlineHelpText>To capture additional unique information about your ERP/Financial System.</inlineHelpText>
    <label>Additional ERP/Financial System Info</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>