force-app/main/default/objects/Billing_Assessment__c/fields/Additional_Fulfillment_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Fulfillment_Information__c</fullName>
    <inlineHelpText>To capture additional unique information about your Fulfillment processes.</inlineHelpText>
    <label>Additional Fulfillment Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>