force-app/main/default/objects/Billing_Assessment__c/fields/Additional_General_Ledger_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_General_Ledger_Information__c</fullName>
    <inlineHelpText>To capture additional unique information about your General Ledger systems.</inlineHelpText>
    <label>Additional General Ledger Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>