force-app/main/default/objects/Billing_Assessment__c/fields/Additional_Invoicing_Inormation__c.field-meta.xml
<CustomField>
    <fullName>Additional_Invoicing_Inormation__c</fullName>
    <inlineHelpText>To capture additional unique information about your Invoicing Process</inlineHelpText>
    <label>Additional Invoicing Inormation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>