force-app/main/default/objects/Billing_Assessment__c/fields/Additional_Orders_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Orders_Information__c</fullName>
    <inlineHelpText>To capture any unique information about your Orders Processes.</inlineHelpText>
    <label>Additional Orders Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>