force-app/main/default/objects/Billing_Assessment__c/fields/Additional_Payments_Receivables_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Payments_Receivables_Info__c</fullName>
    <inlineHelpText>To capture additional unique information about your Payments and Receivables Processes</inlineHelpText>
    <label>Additional Payments/Receivables Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>