force-app/main/default/objects/Billing_Assessment__c/fields/Additional_Pricing_and_Products_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Pricing_and_Products_Info__c</fullName>
    <inlineHelpText>To capture additional unique information about Pricing and Products</inlineHelpText>
    <label>Additional Pricing and Products Info</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>