force-app/main/default/objects/Billing_Assessment__c/fields/Additional_Renewals_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Renewals_Information__c</fullName>
    <inlineHelpText>To capture additional unique information about your Renewals Process.</inlineHelpText>
    <label>Additional Renewals Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>