force-app/main/default/objects/Billing_Assessment__c/fields/Additional_Revenue_Recognition_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Revenue_Recognition_Info__c</fullName>
    <inlineHelpText>To capture additional unique information about your Revenue Recognition processes.</inlineHelpText>
    <label>Additional Revenue Recognition Info</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>