force-app/main/default/objects/Billing_Assessment__c/fields/Additional_Tax_Rules_Treatment_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Tax_Rules_Treatment_Info__c</fullName>
    <inlineHelpText>To capture additional unique information about your Tax Rules and Treatments processes.</inlineHelpText>
    <label>Additional Tax Rules &amp; Treatment Info</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>