force-app/main/default/objects/Billing_Assessment__c/fields/Additional_Usage_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Usage_Information__c</fullName>
    <inlineHelpText>To capture any unique information about Usage Processes.</inlineHelpText>
    <label>Additional Usage Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>