force-app/main/default/objects/Billing_Assessment__c/fields/Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Adjustments__c</fullName>
    <inlineHelpText>Where do you expect to have adjustments applied?</inlineHelpText>
    <label>Adjustments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Engine</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>