force-app/main/default/objects/Billing_Assessment__c/fields/Any_other_pricing_considerations__c.field-meta.xml
<CustomField>
    <fullName>Any_other_pricing_considerations__c</fullName>
    <inlineHelpText>Pricing can be complicated. Anything else we should know about your pricing requirements?</inlineHelpText>
    <label>Any Other Pricing Considerations</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>