force-app/main/default/objects/Billing_Assessment__c/fields/Approval_Existing_Process__c.field-meta.xml
<CustomField>
    <fullName>Approval_Existing_Process__c</fullName>
    <inlineHelpText>How are approval processes currently implemented?  Be sure to include any concerns and inefficiencies.</inlineHelpText>
    <label>Existing Approval Process</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>