force-app/main/default/objects/Billing_Assessment__c/fields/Approval_Smart__c.field-meta.xml
<CustomField>
    <fullName>Approval_Smart__c</fullName>
    <inlineHelpText>Example: With smart approvals configured, the system remembers the Sales Director approved a 20% discount. If the quote is resubmitted for approval for a legal terms change (but the discount is still 20%), the Sales Director&apos;s previous approval applies.</inlineHelpText>
    <label>Remember Prior Approvals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No - repeat all approval steps when submitted</fullName>
            </value>
            <value>
                <fullName>Yes - skip approval steps if underlying value the same</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>