force-app/main/default/objects/Billing_Assessment__c/fields/Are_Contracts_being_created_in_CPQ__c.field-meta.xml
<CustomField>
    <fullName>Are_Contracts_being_created_in_CPQ__c</fullName>
    <label>Are Contracts being created in CPQ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>