force-app/main/default/objects/Billing_Assessment__c/fields/Are_Renewals_being_created_in_CPQ__c.field-meta.xml
<CustomField>
    <fullName>Are_Renewals_being_created_in_CPQ__c</fullName>
    <inlineHelpText>Do you currently create renewals leveraging CPQ functionality?</inlineHelpText>
    <label>Renewals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>