force-app/main/default/objects/Billing_Assessment__c/fields/Assessment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field for customer to check when the assessment is completed</description>
    <inlineHelpText>Please check this field when you have completed the assessment to the best of your abilities.</inlineHelpText>
    <label>Assessment Completed</label>
    <type>Checkbox</type>
</CustomField>