force-app/main/default/objects/Billing_Assessment__c/fields/Average_Invoice_Lines__c.field-meta.xml
<CustomField>
    <fullName>Average_Invoice_Lines__c</fullName>
    <inlineHelpText>What is the average number of invoice lines on your invoices?</inlineHelpText>
    <label>Average Invoice Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>