force-app/main/default/objects/Billing_Assessment__c/fields/Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date__c</fullName>
    <inlineHelpText>Do you have a unique bill date per customer? Or do you bill all customers on the same day each month?</inlineHelpText>
    <label>Billing Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>