force-app/main/default/objects/Billing_Assessment__c/fields/Billing_Systems_being_evaluated__c.field-meta.xml
<CustomField>
    <fullName>Billing_Systems_being_evaluated__c</fullName>
    <label>Billing Systems being evaluated</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>