force-app/main/default/objects/Billing_Assessment__c/fields/BillingSystemandProcess__c.field-meta.xml
<CustomField>
    <fullName>BillingSystemandProcess__c</fullName>
    <inlineHelpText>What system produces invoices? Are integrations in place to get orders into the billing system or are they manually reentered?</inlineHelpText>
    <label>Billing System and Process</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>