force-app/main/default/objects/Billing_Assessment__c/fields/ContractRenewals__c.field-meta.xml
<CustomField>
    <fullName>ContractRenewals__c</fullName>
    <inlineHelpText>If you sell and time-based products (i.e., subscriptions or service contracts), describe the renewal process that occurs at the end of the original term.</inlineHelpText>
    <label>Contract Renewals</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>