force-app/main/default/objects/Billing_Assessment__c/fields/ContractReponsitory__c.field-meta.xml
<CustomField>
    <fullName>ContractReponsitory__c</fullName>
    <inlineHelpText>Where are your fully executed contract documents currently stored?</inlineHelpText>
    <label>Contract Repository</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>