force-app/main/default/objects/Billing_Assessment__c/fields/Credits_Debits__c.field-meta.xml
<CustomField>
    <fullName>Credits_Debits__c</fullName>
    <label>Credits/Debits</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>