force-app/main/default/objects/Billing_Assessment__c/fields/Current_Amendment_Process__c.field-meta.xml
<CustomField>
    <fullName>Current_Amendment_Process__c</fullName>
    <label>Current Amendment Process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>