force-app/main/default/objects/Billing_Assessment__c/fields/Current_Billing_System__c.field-meta.xml
<CustomField>
    <fullName>Current_Billing_System__c</fullName>
    <label>Current Billing System</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>