force-app/main/default/objects/Billing_Assessment__c/fields/Current_Collections_Process__c.field-meta.xml
<CustomField>
    <fullName>Current_Collections_Process__c</fullName>
    <inlineHelpText>Where is your current collection process managed?</inlineHelpText>
    <label>Current Collections Process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>