force-app/main/default/objects/Billing_Assessment__c/fields/Current_fulfillment_system_process__c.field-meta.xml
<CustomField>
    <fullName>Current_fulfillment_system_process__c</fullName>
    <inlineHelpText>Describe your current process for activating/fulfilling your products and services</inlineHelpText>
    <label>Current Fulfillment System/Process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>