force-app/main/default/objects/Billing_Assessment__c/fields/Current_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Current_Payment_Gateway__c</fullName>
    <inlineHelpText>Who is your Payment Gateway provider?</inlineHelpText>
    <label>Current Payment Gateway</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>