force-app/main/default/objects/Billing_Assessment__c/fields/Current_Payment_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Payment_Solution__c</fullName>
    <inlineHelpText>In what system does your payment collection and allocation/application processes take place?</inlineHelpText>
    <label>Current Payment Solution</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>