force-app/main/default/objects/Billing_Assessment__c/fields/Current_Renewal_Process__c.field-meta.xml
<CustomField>
    <fullName>Current_Renewal_Process__c</fullName>
    <label>Current Renewal Process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>