force-app/main/default/objects/Billing_Assessment__c/fields/Current_Rev_Rec_System_Process__c.field-meta.xml
<CustomField>
    <fullName>Current_Rev_Rec_System_Process__c</fullName>
    <inlineHelpText>What system do you plan to use for Rev Rec?</inlineHelpText>
    <label>Current Rev Rec System/Process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>