force-app/main/default/objects/Billing_Assessment__c/fields/Current_System_s__c.field-meta.xml
<CustomField>
    <fullName>Current_System_s__c</fullName>
    <label>Current System(s)</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>