force-app/main/default/objects/Billing_Assessment__c/fields/Current_Taxation_Process__c.field-meta.xml
<CustomField>
    <fullName>Current_Taxation_Process__c</fullName>
    <inlineHelpText>What tax engine(s) are in use today?</inlineHelpText>
    <label>Taxation Process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>