force-app/main/default/objects/Billing_Assessment__c/fields/Desired_Contract_Process__c.field-meta.xml
<CustomField>
    <fullName>Desired_Contract_Process__c</fullName>
    <label>Desired Contract Process?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>