force-app/main/default/objects/Billing_Assessment__c/fields/Desired_fulfillment_process__c.field-meta.xml
<CustomField>
    <fullName>Desired_fulfillment_process__c</fullName>
    <inlineHelpText>Please describe your desired process for activating/fulfilling your products and services</inlineHelpText>
    <label>Desired Fulfillment Process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>