force-app/main/default/objects/Billing_Assessment__c/fields/Env_AdminExternalWeeklyHours__c.field-meta.xml
<CustomField>
    <fullName>Env_AdminExternalWeeklyHours__c</fullName>
    <inlineHelpText>How many hours do External/Vendor Salesforce Admins currently spend each week making changes to your Salesforce Org.</inlineHelpText>
    <label>Hours per Week External Salesforce Admin</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>