force-app/main/default/objects/Billing_Assessment__c/fields/Env_CurrentQuoteTool__c.field-meta.xml
<CustomField>
    <fullName>Env_CurrentQuoteTool__c</fullName>
    <label>Current Quoting Tool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apttus</fullName>
            </value>
            <value>
                <fullName>Big Machines</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Salesforce CPQ (SteelBrick)</fullName>
            </value>
            <value>
                <fullName>Other (describe in comments</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>