force-app/main/default/objects/Billing_Assessment__c/fields/Env_Edition__c.field-meta.xml
<CustomField>
    <fullName>Env_Edition__c</fullName>
    <label>Current Salesforce Edition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Professional Edition PE</fullName>
            </value>
            <value>
                <fullName>Enterprise Edition EE</fullName>
            </value>
            <value>
                <fullName>Performance/Unlimited Edition UE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>