force-app/main/default/objects/Billing_Assessment__c/fields/Env_Languages__c.field-meta.xml
<CustomField>
    <fullName>Env_Languages__c</fullName>
    <inlineHelpText>Select the languages that have been enabled for internal and/or community users.</inlineHelpText>
    <label>Languages Enabled</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English Only</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>